# robosoft_openai

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  upstream.repos
.github/workflows/: build.yml
include/robosoft_openai/: convert_image_to_base_64.hpp
include/ros2_openai_server/: convert_image_to_base_64.hpp
src/: example_client.cpp  openai_server.cpp
